--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/typescript-build": "^3.0.2",
     "@nuxtjs/tailwindcss": "^6.10.4",
     "@sidebase/nuxt-auth": "^0.6.4",
+    "@unlok-co/nuxt-stripe": "^2.0.0",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
     "autoprefixer": "^10.4.16",
     "leaflet": "^1.9.4",
@@ -36,23 +37,33 @@
     "@pinia/nuxt": "^0.5.1",
     "@prisma/client": "^5.7.1",
     "@radix-icons/vue": "^1.0.0",
+    "@vercel/blob": "^0.19.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-vue": "^8.0.0-rc19",
     "flipbook-vue": "^1.0.0-beta.4",
     "flowbite": "^2.2.1",
+    "h3-zod": "^0.5.3",
     "joi": "^17.11.0",
     "lucide-vue-next": "^0.298.0",
     "next-auth": "4.22.5",
+    "nuxt-mail": "^4.0.2",
+    "nuxt-stripe-module": "^3.2.0",
     "nuxt-sweetalert2": "^1.0.0",
     "opentable": "^6.3.1",
     "prisma-dbml-generator": "^0.10.0",
+    "prisma-erd-generator": "^1.11.2",
     "radix-vue": "^1.3.0",
+    "resend": "^3.1.0",
     "sweetalert2": "^11.10.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "vue-carousel": "^0.18.0",
+    "vue-toast-notification": "^3.1.2",
     "vue3-carousel-nuxt": "^1.1.0",
-    "vue3-google-map": "^0.18.0"
+    "vue3-google-map": "^0.18.0",
+    "vue3-toastify": "^0.2.1",
+    "zod": "^3.22.4",
+    "zod-form-data": "^2.0.2"
   }
 }
